# json-editor

./: Makefile  pyproject.toml  pyproject_back.toml  requirements.txt
docs/source/: conf.py  index.rst
docs/source/json-editor/: index.rst
docs/source/json-editor/architecture_level/: index.rst
docs/source/json-editor/architecture_level/requirements/: api_reqs.rst  index.rst  third_party_reqs.rst  top_level_reqs.rst
docs/source/json-editor/architecture_level/software_architectural_design/: index.rst
docs/source/json-editor/architecture_level/software_architectural_design/blocks/: index.rst
docs/source/json-editor/architecture_level/software_architectural_design/concepts/: index.rst
docs/source/json-editor/architecture_level/software_architectural_design/constraints/: index.rst
docs/source/json-editor/architecture_level/tests/: index.rst
docs/source/json-editor/iasm/: im.rst  index.rst  sm.rst
docs/source/json-editor/unit_level/: index.rst
docs/source/json-editor/unit_level/unit_x/: index.rst
docs/source/json-editor/unit_level/unit_x/software_unit_design/: index.rst
docs/source/json-editor/unit_level/unit_y/: index.rst
docs/source/json-editor/user_manual/: index.rst  model_syntax.rst
docs/source/json-editor/user_manual/diagrams/: flow_overview.puml  use_cases.puml
json_editor/: __main__.py  cli.py  version.py
json_editor/app/: __init__.py  cli.py  json_editor.py  main.py
json_editor/app/plugin_/: plugin_base.py  plugin_manager.py
tests/data/input/: angel.json
tests/data/plugins/: plugin_sample.py
tests/data/schemas/: SW_Repo.json
(+20 files in other folders)
