[build-system]
requires = ["setuptools>=64.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "json-editor"
dynamic = ["version", "dependencies"]
authors = [
  {name = "Andres Sanchez", email = "andres.sanchez.engineering@gmail.com"},
]
description = "Configurator Tool"
readme = "json-editor/README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"


[tool.setuptools.dynamic.dependencies]
file = ["requirements.txt"]

[tool.setuptools.dynamic.optional-dependencies.dev]
file = ["requirements-dev.txt"]

[tool.setuptools.packages.find]
where = ["."]
include = ["json_editor*"]

[project.urls]
Documentation = "https://github.com/OrdisoEnterprise/json-editor/tree/main#readme"
Source = "https://github.com/OrdisoEnterprise/json-editor"
Tracker = "https://github.com/OrdisoEnterprise/json-editor/issues"

[tool.setuptools.package-data]

[project.scripts]
json-editor = "json_editor.cli:cli"

[tool.setuptools_scm]
